@@ -19,6 +19,18 @@ class WC_Stripe_Express_Checkout_Helper_Test extends WP_UnitTestCase {
 		$stripe_settings['test_publishable_key'] = 'pk_test_key';
 		$stripe_settings['test_secret_key']      = 'sk_test_key';
 		WC_Stripe_Helper::update_main_stripe_settings( $stripe_settings );
+
+		// Add a shipping zone.
+		$zone = new WC_Shipping_Zone();
+		$zone->set_zone_name( 'Worldwide' );
+		$zone->set_zone_order( 1 );
+		$zone->save();
+
+		$flat_rate_id    = $zone->add_shipping_method( 'flat_rate' );
+		$method          = WC_Shipping_Zones::get_shipping_method( $flat_rate_id );
+		$option_key      = $method->get_instance_option_key();
+		$options['cost'] = '5';
+		update_option( $option_key, $options );
 	}
 
 	/**
@@ -52,17 +64,24 @@ class WC_Stripe_Express_Checkout_Helper_Test extends WP_UnitTestCase {
 		WC()->cart->add_to_cart( $virtual_product->get_id(), 1 );
 
 		// Hide if cart has virtual product and tax is based on shipping or billing address.
+		update_option( 'woocommerce_calc_taxes', 'yes' );
 		update_option( 'woocommerce_tax_based_on', 'billing' );
 		$this->assertFalse( $wc_stripe_ece_helper_mock->should_show_express_checkout_button() );
 
 		update_option( 'woocommerce_tax_based_on', 'shipping' );
 		$this->assertFalse( $wc_stripe_ece_helper_mock->should_show_express_checkout_button() );
 
+		// Do not hide if taxes are not enabled.
+		update_option( 'woocommerce_calc_taxes', 'no' );
+		$this->assertTrue( $wc_stripe_ece_helper_mock->should_show_express_checkout_button() );
+
 		// Do not hide if taxes are not based on customer billing or shipping address.
+		update_option( 'woocommerce_calc_taxes', 'yes' );
 		update_option( 'woocommerce_tax_based_on', 'base' );
 		$this->assertTrue( $wc_stripe_ece_helper_mock->should_show_express_checkout_button() );
 
 		// Do not hide if cart requires shipping.
+		update_option( 'woocommerce_tax_based_on', 'billing' );
 		$shippable_product = WC_Helper_Product::create_simple_product();
 		WC()->cart->add_to_cart( $shippable_product->get_id(), 1 );
 		$this->assertTrue( $wc_stripe_ece_helper_mock->should_show_express_checkout_button() );
